--- a/project.ipynb
+++ b/project.ipynb
@@ -265,7 +265,7 @@
    "id": "38ed7747",
    "metadata": {},
    "source": [
-    "### Data Preprocessing"
+    "### Data Cleaning"
    ]
   },
   {
